# CLion-Taller1_LopezRicardo_VegaMaximiliano

./: CMakeLists.txt  Informe Taller 1.docx  escenarios.txt  ficha.cpp  ficha.h  fichas.txt  listaNexoSimple.cpp  listaNexoSimple.h  main.cpp  nodo.cpp  nodo.h  tablero.cpp  tablero.h
exportToHTML/: .ninja_log.html  CMakeCCompiler.cmake.html  CMakeCCompilerId.c.html  CMakeCXXCompiler.cmake.html  CMakeCXXCompilerId.cpp.html  CMakeCache.txt.html  CMakeConfigureLog.yaml.html  CMakeLists.txt.html  CMakeRCCompiler.cmake.html  CMakeSystem.cmake.html  LastTest.log.html  Taller1EstructuraDeDatosw.iml.html  TargetDirectories.txt.html  build.ninja.html  cache-v2-2dfbbd9eab5d0a1d3143.json.html  clion-Debug-log.txt.html  clion-environment.txt.html  cmakeFiles-v1-829f6d6001e7de30beef.json.html  cmake_install.cmake.html  codemodel-v2-3906595d497103a63a3d.json.html  editor.xml.html  ficha.cpp.html  ficha.h.html  fichas.txt.html  index-2024-10-05T19-37-03-0636.json.html  index.html  listaNexoSimple.cpp.html  listaNexoSimple.h.html  main.cpp.html  misc.xml.html  modules.xml.html  nodo.cpp.html  nodo.h.html  rules.ninja.html  tablero.cpp.html  tablero.h.html  target-Taller1EstructuraDeDatosw-Debug-16f3d5cd9a4e738f906e.json.html  toolchains-v1-ab4e077067d3a632b7bf.json.html  workspace.xml.html
