cmake_minimum_required(VERSION 3.29)
project(Taller1EstructuraDeDatosw)

set(CMAKE_CXX_STANDARD 20)

add_executable(Taller1EstructuraDeDatosw main.cpp
        ficha.cpp
        ficha.h
        tablero.cpp
        tablero.h
        listaNexoSimple.cpp
        listaNexoSimple.h
        nodo.cpp
        nodo.h)
